# F-telegram-bot-RKO

./: .devcontainer.json  .gitignore  README.md
django/: pyproject.toml  pytest.ini
django/apps/main/: adapter.py  admin.py  apps.py  models.py  serializers.py  tasks.py  utils.py  views.py
django/apps/main/migrations/: 0001_initial.py  0002_article_created.py  0003_auto_20220318_0217.py  0004_auto_20220323_0418.py  0005_auto_20220417_1422.py  0006_auto_20220516_1548.py  0007_loanapplication_telegram_chat_id.py  0008_loanapplication_status.py  0009_auto_20220529_2328.py  0010_auto_20221010_1056.py  0011_loanrequest_tariffplan_typetochoose.py  0012_auto_20221013_0910.py  0013_auto_20221013_1211.py  0014_auto_20221013_1246.py  0015_auto_20221014_0440.py  0016_auto_20221014_0538.py  0017_auto_20221014_0957.py  0018_auto_20221014_1024.py  0019_auto_20221015_1629.py  0020_auto_20221016_0750.py  0021_auto_20221016_1501.py  0022_auto_20221016_1606.py  0023_auto_20221016_1644.py  0024_auto_20221016_1725.py  0025_auto_20221017_0746.py  0026_auto_20221019_0627.py  0027_auto_20221025_1039.py  0028_auto_20221025_1147.py  0029_auto_20221025_1152.py  0030_auto_20221025_1154.py  0031_auto_20221025_1158.py  0032_auto_20221027_1119.py  0033_auto_20221028_0955.py  0034_auto_20221028_1026.py  0035_auto_20221102_0953.py  0036_auto_20221102_0956.py  0037_auto_20221102_1000.py  0038_auto_20221102_1004.py  0039_auto_20221102_1004.py  (+30 more)
django/project/: celery.py  urls.py  wsgi.py
django/project/settings/: base.py  dev.py  production.py
django/telegram-bot/: bot.py
vuejs/: package.json  (+1 more)
(+143 files in other folders)
